# waves

./: .gitignore  Cargo.toml  README.md
examples/: reverb.rs  sine.rs
src/: io.rs  lib.rs  param.rs  time.rs
