[package]
name = "waves"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
vst2 = "0.0.1"
log = "0.3"
simplelog = "0.4"
num-traits = "0.1"
log-panics = "1.1"

[lib]
name = "waves"

[[example]]
name = "sine"
crate-type = ["cdylib"]

[[example]]
name = "reverb"
crate-type = ["cdylib"]